[gd_scene load_steps=2 format=3 uid="uid://ckvrww5jpoldl"]

[ext_resource type="Script" path="res://addons/turbo_tools/turbo_generate.gd" id="1_bjgmc"]

[node name="TurboGenerate" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_bjgmc")

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ActionSelect" type="VBoxContainer" parent="Panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Input" type="LineEdit" parent="Panel/MarginContainer/ActionSelect"]
unique_name_in_owner = true
layout_mode = 2

[node name="Results" type="VBoxContainer" parent="Panel/MarginContainer/ActionSelect"]
unique_name_in_owner = true
layout_mode = 2

[node name="SetValue" type="VBoxContainer" parent="Panel/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/SetValue"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/SetValue/HBoxContainer"]
layout_mode = 2
text = "class extends:"

[node name="Input" type="LineEdit" parent="Panel/MarginContainer/SetValue/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "node2D"

[connection signal="focus_exited" from="Panel/MarginContainer/ActionSelect/Input" to="." method="_on_input_focus_exited"]
[connection signal="text_changed" from="Panel/MarginContainer/ActionSelect/Input" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="Panel/MarginContainer/ActionSelect/Input" to="." method="_on_input_text_submitted"]
[connection signal="focus_exited" from="Panel/MarginContainer/SetValue/HBoxContainer/Input" to="." method="_on_input_focus_exited"]
[connection signal="text_changed" from="Panel/MarginContainer/SetValue/HBoxContainer/Input" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="Panel/MarginContainer/SetValue/HBoxContainer/Input" to="." method="_on_input_text_submitted"]
